my-apps/media/nestmtx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nestmtx
  labels:
    volsync.backube/privileged-movers: "true"
