my-apps/media/nestmtx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestmtx
  namespace: nestmtx
  labels:
    app: nestmtx
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: nestmtx
  template:
    metadata:
      labels:
        app: nestmtx
      annotations:
        instrumentation.opentelemetry.io/inject-nodejs: "opentelemetry/default"
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      # runtimeClassName: nvidia
      # nodeSelector:
      #   feature.node.kubernetes.io/pci-0300_10de.present: "true"
      containers:
        - name: nestmtx
          image: nestmtx/amd64:latest@sha256:b3604349b5c88fe53c643249f025b4c0c80c44137d40c18651572187c671b1cd
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2000
              name: port-2000
            - containerPort: 2001
              name: port-2001
            - containerPort: 1935
              name: rtmp
            - containerPort: 8000
              protocol: UDP
              name: udp-8000
            - containerPort: 8001
              protocol: UDP
              name: udp-8001
            - containerPort: 8189
              name: tcp-8189
            - containerPort: 8189
              protocol: UDP
              name: udp-8189
            - containerPort: 8554
              name: rtsp
            - containerPort: 8888
              name: port-8888
            - containerPort: 8889
              name: port-8889
            - containerPort: 8890
              name: port-8890
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 8000m
              memory: 12Gi
              # nvidia.com/gpu: 1
          volumeMounts:
            - name: data
              mountPath: /home/node/app/tmp
              # - name: nvidia-driver
              #   mountPath: /usr/local/nvidia
              #   readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: storage
