my-apps/media/nestmtx/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nestmtx
  namespace: nestmtx
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
    - "nestmtx.vanillax.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nestmtx
          port: 2000
